tests/neg/i10870.check
-- [E008] Not Found Error: tests/neg/i10870.scala:10:16 ----------------------------------------------------------------
10 |    def x = b.a.x  // error
   |            ^^^^^
   |            value x is not a member of A.
   |            Extension methods were tried, but the search failed with:
   |
   |                Overloaded or recursive method x needs return type
   |                
   |                 Run with -explain-cyclic for more details.
